# today_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  serverless.yml  source.ipynb
.github/ISSUE_TEMPLATE/: bug.md  daily.md  feature.md
.github/workflows/: ci.yml
