[tool.poetry]
name = "data-startupjobs"
version = "0.1.0"
description = ""
authors = ["Abhi Yerra <abhi@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
pyairtable = "^1.4.0"
pynamodb = "^5.3.4"
feedparser = "^6.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
